Se suben referencias de la primer pantalla

--- a/AppMinisterialService.iOS/AppMinisterialService.iOS.csproj
+++ b/AppMinisterialService.iOS/AppMinisterialService.iOS.csproj
@@ -118,7 +118,6 @@
     <BundleResource Include="Resources\tab_feed.png" />
     <BundleResource Include="Resources\tab_feed%402x.png" />
     <BundleResource Include="Resources\tab_feed%403x.png" />
-    <BundleResource Include="Resources\xamarin_logo.png" />
     <BundleResource Include="Resources\xamarin_logo%402x.png" />
     <BundleResource Include="Resources\xamarin_logo%403x.png" />
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -141,5 +140,8 @@
       <Project>{0706CF20-E786-4EBF-B4EC-E98B71E60642}</Project>
       <Name>AppMinisterialService</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\iglesia.jpg" />
   </ItemGroup>
 </Project>
